classDiagram
    Dispositivo o-- Cliente 
    Medicion o-- Dispositivo
    Notificacion o-- Dispositivo
    Falta o-- Dispositivo

    class Cliente {
    +Email : string
    +Nombre: string
    +Apellido: string
    +Contraseña: string
    +Dispositivos: Dispositivo 
    +Nacimiento: date
    }
    

    class Dispositivo{
    +IdDispositivo: int   
    +NumSerie: string
    +Modelo: string
    +Mediciones: Medicion
    +Notificaciones: Notificacion
    +Faltas: Falta
    }
    

    class Falta{
    +IdDispositivo: int
    +Mensaje: string
    }

    class Medicion {
    +IdDispositivo: int
    +Unidad: string 
    +Valor: int
    +FechaHora: datetime
   }
    

    class Notificacion{
    +IdDispositivo: int 
    +Mensaje: string 
    +FechaHora: datetime 
}
    